Added : Project schematic

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -227,6 +227,10 @@
                     <a href="https://www.mongodb.com/atlas/database " target="_blank ">MongoDB Atlas</a>
                 </li>
             </ul>
+            <div>
+                <div>A rough schematic of the project infrastructure is as follows</div>
+                <img alt=" " id="layout" src="./assets/Project_Layout_Light.png" style="width: 90%;padding:0 5%" />
+            </div>
             Interested in what is hapenning under the hood? Have a look at the source code <a href="https://github.com/soham874/Online-Web-Resume " target="_blank ">here</a>.
         </div>
     </div>
