Added : Suggestion box front end logic

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -270,20 +270,16 @@
                         </div>
                     </div>
                     <div class="contact-form-wrapper">
-                        <form>
+                        <form id="suggestion_box">
                             <div class="form-item">
-                                <input type="text" name="sender" required>
+                                <input type="text" name="sender" id="user_name" style="font-size: 40px;" required>
                                 <label>Name:</label>
                             </div>
                             <div class="form-item">
-                                <input type="text" name="email" required>
-                                <label>Email:</label>
-                            </div>
-                            <div class="form-item">
-                                <textarea class="" name="message" required></textarea>
+                                <textarea class="message_box" name="message" style="font-size: 20px;" id="user_message" required></textarea>
                                 <label>Message:</label>
                             </div>
-                            <button class="submit-btn">Send</button>
+                            <button type="submit" class="submit-btn" onclick="sendReview()">Send</button>
                         </form>
                     </div>
                 </div>
