Added : Completed Contact section

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -257,6 +257,10 @@
                 <div class="contact-box">
                     <div class="contact-links">
                         <h2>Thank you for choosing to share your opinions</h2>
+                        <div style="text-align: justify;color:white">
+                            <br> The project is far from perfect, but it is an honest attempt to reach as close to professionalism as possible. Every suggestion provided, every opinion shared, and every bug reported will help me take a step closer to
+                            that level. I thank you profusely for choosing to connect with me.</br>
+                        </div>
                         <div class="links">
                             <div class="link">
                                 <a href="https://www.linkedin.com/in/soham-choudhury-342289190/" target="_blank "><img class="image" src="https://i.postimg.cc/m2mg2Hjm/linkedin.png" alt="linkedin"></a>
@@ -265,22 +269,9 @@
                                 <a href="https://github.com/soham874" target="_blank "><img class="image" src="https://i.postimg.cc/YCV2QBJg/github.png" alt="github"></a>
                             </div>
                             <div class="link">
-                                <a href="mailto:soham874@gmail.com" target="_blank "><img class="image" src="https://i.postimg.cc/NjLfyjPB/email.png" alt="email"></a>
+                                <a href="mailto:soham.choudhury.bwn@gmail.com?subject=Feedback for your Web Portal" target="_blank "><img class="image" src="https://i.postimg.cc/NjLfyjPB/email.png" alt="email"></a>
                             </div>
                         </div>
-                    </div>
-                    <div class="contact-form-wrapper">
-                        <form id="suggestion_box">
-                            <div class="form-item">
-                                <input type="text" name="sender" id="user_name" style="font-size: 40px;" required>
-                                <label>Name:</label>
-                            </div>
-                            <div class="form-item">
-                                <textarea class="message_box" name="message" style="font-size: 20px;" id="user_message" required></textarea>
-                                <label>Message:</label>
-                            </div>
-                            <button type="submit" class="submit-btn" onclick="sendReview()">Send</button>
-                        </form>
                     </div>
                 </div>
             </section>
@@ -289,7 +280,7 @@
         <!-- Footer section... -->
         <div class="footer-section ">
             <div>Made with &lt;3 by Soham</div>
-            <div style="width: 100px ">
+            <div style="width:10% ">
                 <img alt=" " src="./assets/sunny.png " style="height: 45px; width: 45px;transition: 500ms;padding:5px " id="imgClickAndChange" onclick="changeImage() " />
             </div>
             <div id="thought-link" onclick="smoothScrolltoSection( '#contact_heading') ">
@@ -299,5 +290,7 @@
 
     </div>
 </body>
+
+</html>
 
 </html>
