--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" name="viewport">
 
-    <title>Soham's Web Resume</title>
+    <title>Soham's Online Portal</title>
 
     <link rel="icon" href="./assets/resume.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -91,7 +91,7 @@
                     I am a junior level tech enthusiast with an inquisitive mind, always on the lookout to learn new technologies and have at least a fundamental level of understanding about how things work. This webpage has been designed to give a quick insight into my
                     academic and professional journey so far.
                 </div>
-                <img class="hex-background" src="./assets/displaypic.jpeg">
+                <img id="display_pic" class="hex-background">
             </div>
         </div>
 
