--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -279,7 +279,24 @@
                                 </div>
                             </div>
                         </div>
-                    </div><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfavlgwF8xAQINWii3-s4fJtZb0vJmBC9I0xkGJnDeW8SIWlA/viewform?embedded=true" width="100%" height="800px" frameborder="0" marginheight="0" marginwidth="0" style="font-size: 50px;">Loading…</iframe>
+                    </div>
+                    <div class="contact-form-wrapper">
+                        <form>
+                            <div class="form-item">
+                                <input class="input_fields" type="text" name="sender" required>
+                                <label>Name:</label>
+                            </div>
+                            <div class="form-item">
+                                <input class="input_fields" type="text" name="email" required>
+                                <label>Email:</label>
+                            </div>
+                            <div class="form-item">
+                                <textarea class="input_fields" name="message" required style="resize: none;height:200px;"></textarea>
+                                <label>Message:</label>
+                            </div>
+                            <button class="submit-btn input_fields">Send</button>
+                        </form>
+                    </div>
                 </section>
 
             </div>
