--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -283,18 +283,18 @@
                     <div class="contact-form-wrapper">
                         <form>
                             <div class="form-item">
-                                <input class="input_fields" type="text" name="sender" required>
+                                <input class="input_fields" type="text" name="sender" id="user_name" required>
                                 <label>Name:</label>
                             </div>
                             <div class="form-item">
-                                <input class="input_fields" type="text" name="email" required>
+                                <input class="input_fields" type="text" name="email" id="email_id" required>
                                 <label>Email:</label>
                             </div>
                             <div class="form-item">
-                                <textarea class="input_fields" name="message" required style="resize: none;height:200px;"></textarea>
+                                <textarea class="input_fields" name="message" id="user_message" required style="resize: none;height:200px;"></textarea>
                                 <label>Message:</label>
                             </div>
-                            <button class="submit-btn input_fields">Send</button>
+                            <button class="submit-btn input_fields" onclick="sendReview();return false">Send</button>
                         </form>
                     </div>
                 </section>
