--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -287,7 +287,7 @@
                                 <label>Name:</label>
                             </div>
                             <div class="form-item">
-                                <input class="input_fields" type="text" name="email" id="email_id" required>
+                                <input class="input_fields" type="email" name="email" id="email_id" required>
                                 <label>Email:</label>
                             </div>
                             <div class="form-item">
