Refactored : Modified code
JSP page loads directly from html page

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -242,13 +242,10 @@
                     <li>Webpage hosting -
                         <a href="https://www.heroku.com/ " target="_blank ">Heroku</a></li>
                     <li>Database support -
-                        <a href="https://www.mongodb.com/atlas/database " target="_blank ">MongoDB Atlas</a>
+                        <a href="https://www.mongodb.com/atlas/database " target="_blank ">MongoDB Atlas</a>,
+                        <a href="https://www.google.com/intl/en_in/drive/" target="_blank ">Google Drive</a>
                     </li>
                 </ul>
-                <div>
-                    <div>A rough schematic of the project infrastructure is as follows</div>
-                    <img alt=" " id="layout" src="./assets/Project_Layout_Light.png" style="width: 90%;padding:0 5%" />
-                </div>
                 Interested in what is hapenning under the hood? Have a look at the source code <a href="https://github.com/soham874/Online-Web-Resume " target="_blank ">here</a>.
             </div>
         </div>
@@ -296,6 +293,9 @@
                             </div>
                             <button class="submit-btn input_fields" onclick="sendReview();return false">Send</button>
                         </form>
+                        <div style="text-align: center;" id="message_success">
+                            Thank you for your submission. Your response has been recoreded succesfully
+                        </div>
                     </div>
                 </section>
 
