--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -302,7 +302,7 @@
                                     <label id="message_error"> </label><br></br>
                                     <button class="submit-btn input_fields" onclick="sendReview();return false">Send</button>
                                 </form>
-                                <div style="text-align: center;" id="message_success">
+                                <div style="text-align: center;color:white" id="message_success">
                                     Thank you for your submission. Your response has been recoreded succesfully
                                 </div>
                             </div>
