Refactored : Added theme change bulb and chain

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -82,6 +82,10 @@
             </div>
         </div>
 
+        <img class="theme_bulb" alt=" " src="./assets/idea.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="bulb" />
+
+        <img class="theme_chain" alt=" " src="./assets/chain-modified.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="chain" onclick="changeImage()" />
+
         <!-- Summary... -->
         <div class="generic_div">
             <div class="header-common-left" id="Summary_heading">
