Refactored : Modified help section

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -47,8 +47,9 @@
                 <p style="margin:0px;">Quick scroll to different sections here</p>
             </div>
             <div id="bottom_help">
-                <p style="margin:0px;">Change the theme here</p>
-                <img id="arr_down" src="assets/Downarray_light.png" />
+                <p style="margin:0px;">Pull chain to change theme
+                    <img id="arr_down" src="assets/Downarray_light.png" />
+                </p>
             </div>
 
         </div>
@@ -82,7 +83,7 @@
             </div>
         </div>
 
-        <img class="theme_bulb" alt=" " src="./assets/idea.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="bulb" />
+        <img class="theme_bulb" alt=" " src="./assets/bulb_lit.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="bulb" />
 
         <img class="theme_chain" alt=" " src="./assets/chain-modified.png" style="height: 45px; width: 45px;transition: 500ms;padding:5px" id="chain" onclick="changeImage()" />
 
