Refactored : Minor changes
Contact form content was modified.
Bug fixed for multiple experience tap effect

--- a/src/main/webapp/ViewPage.html
+++ b/src/main/webapp/ViewPage.html
@@ -106,7 +106,7 @@
             </div>
             <!-- Skills... -->
             <div>
-                <div style="padding: 50px;font-size: 20px; text-align: justify;">
+                <div style="padding: 20px 50px; text-align: justify;">
                     Tap or hover over the technologies to know about the different tech-stacks I have worked with in a professional and personnal capacity.
                 </div>
                 <div class="snp" id="snp_section">
@@ -179,6 +179,7 @@
             <div class="header-common-left" id="we_heading">
                 Work Experience
             </div>
+            <div style="padding: 20px 50px;">Tap on the experiences to expand them</div>
             <div>
                 <!-- Timeline -->
                 <div class="timeline" id="work-exp">
@@ -275,7 +276,7 @@
                             <div style="text-align: justify;color:white; padding: 10px">
                                 <br> The project is an honest attempt to reach as close to professionalism as possible. Every suggestion provided, every opinion shared, and every bug reported will help me take a step closer to that level. I thank you
                                 profusely for choosing to connect with me.</br>
-                                <br> </br>
+                                <br>Please use the form below to connect with me, related to the project, or on any other topic, for that matter.</br>
                             </div>
                             <div class="contact-form-wrapper">
                                 <form>
