Fixed hide hover effects not working

--- a/src/main/resources/static/ViewPage.html
+++ b/src/main/resources/static/ViewPage.html
@@ -245,7 +245,7 @@
                 This is my flagship project, developed in an attempt to have better understanding of different technologies used in full-stack development. The technologies used to develop the webapp are as follows:-
                 <ul>
                     <li>WebApp Framework -
-                        <a href="https://docs.spring.io/spring-framework/docs/3.2.x/spring-framework-reference/html/mvc.html " target="_blank ">Spring MVC</a>
+                        <a href="https://spring.io/projects/spring-boot" target="_blank ">Spring Boot</a>
                     </li>
                     <li>Client side interface -
                         <a href="https://developer.mozilla.org/en-US/docs/Web/HTML " target="_blank ">HTML</a>,
@@ -253,7 +253,7 @@
                         <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript " target="_blank ">JavaScript</a>
                     </li>
                     <li>Webpage hosting -
-                        <a href="https://www.heroku.com/ " target="_blank ">Heroku</a></li>
+                        <a href="https://aws.amazon.com/elasticbeanstalk/" target="_blank ">AWS Elastic BeanStalk</a></li>
                     <li>Database support -
                         <a href="https://www.mongodb.com/atlas/database " target="_blank ">MongoDB Atlas</a>,
                         <a href="https://www.google.com/intl/en_in/drive/" target="_blank ">Google Drive</a>
